Added a better functionality on the sumimetro get request, and also to save the request on the database. And found a way to retreive one user data on the database on the bot code.

--- a/routes/public/sumiso.html
+++ b/routes/public/sumiso.html
@@ -8,20 +8,15 @@
 </head>
 
 <body>
+    <h1 id="sumiso"></h1>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
     <script>
         let channel = window.location.pathname.split('/')[2];
-        const socket = io(`/speach/${channel}`);
+        const socket = io(`/sumiso/${channel}`);
+        const sumisoH1 = document.getElementById('sumiso');
 
-        const synth = window.speechSynthesis;
-        let speach = new SpeechSynthesisUtterance();
-        speach.lang = 'es-US';
-
-        socket.on('speach', (data) => {
-            let msg = data.message;
-            speach.text = msg;
-            synth.speak(speach);
-            console.table(speach)
+        socket.on('sumiso_supremo', (data) => {
+            sumisoH1.innerHTML = data.username;
         });
     </script>
 </body>
