--- a/routes/public/clip.html
+++ b/routes/public/clip.html
@@ -24,7 +24,7 @@
         socket.on('play-clip', (data) => {
             let duration = Number(data.duration);
 
-            let clipLink = `http://localhost:3000/video/${channel}/${data.clipNumber}`;
+            let clipLink = `https://domdimabot.com/video/${channel}/${data.clipNumber}`;
 
             const videoPlayer = document.createElement('video');
 
