--- a/routes/public/speach.html
+++ b/routes/public/speach.html
@@ -11,7 +11,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
     <script>
         let channel = window.location.pathname.split('/')[2];
-        const socket = io(`/speach/${channel}`);
+
+        const socket = io.connect('https://domdimabot.com/', {
+            reconnection: true,
+            transports: ['websocket']
+        });
+        const channelSocket = io(`/speach/${channel}`, {
+            forceNew: true,
+            transports: ['websocket']
+        });
 
         const synth = window.speechSynthesis;
         let speach = new SpeechSynthesisUtterance();
