Added more modularity to all files, created the bot file, created twitch client file, made more dynamic the join of the bot to channels from database.
Co-Authored-By: NerfOscar <93657774+NerfOscar@users.noreply.github.com>

--- a/src/routes/public/login.html
+++ b/src/routes/public/login.html
@@ -16,8 +16,8 @@
     <script>
 
 
-        let baseUrl = 'http://localhost:3000/auth';
-        //let baseUrl = 'https://domdimabot.com/auth';
+        //let baseUrl = 'http://localhost:3000/auth';
+        let baseUrl = 'https://domdimabot.com/auth';
 
 
 
