--- a/src/routes/public/register.html
+++ b/src/routes/public/register.html
@@ -4,11 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login to DomDimaBot</title>
+    <title>Register</title>
 </head>
 
 <body>
-    <script src="./assets/js/login.js"></script>
+    <h1>DomDimaBot</h1>
+
+
+    <script src="./assets/js/register.js"></script>
+
 </body>
 
 </html>
