--- a/src/routes/public/sumimetro.html
+++ b/src/routes/public/sumimetro.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sumimetro Supremo</title>
+    <style>
+        body {
+            color: #fff;
+        }
+    </style>
 </head>
 
 <body>
