--- a/src/routes/public/sumimetro.html
+++ b/src/routes/public/sumimetro.html
@@ -9,10 +9,44 @@
         body {
             color: #fff;
         }
+
+        #card {
+            background-color: #000;
+            width: 400px;
+            height: 200px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .title {
+            width: 100%;
+            height: 100px;
+            font-size: 30px;
+            margin: 0;
+            background-color: aqua;
+        }
+
+        #body {
+            width: 100%;
+            height: 300px;
+            font-size: 30px;
+            margin: 0;
+            background-color: aquamarine;
+        }
     </style>
 </head>
 
 <body>
+    <!-- <div class="div" id="card">
+        <div class="title">
+            <h1 id="supremo"></h1>
+        </div>
+        <div id="body">
+            <span id="user"></span><span id="percent"></span>
+        </div>
+    </div> -->
     <h1 id="supremo"></h1>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.2/socket.io.js"></script>
     <script>
@@ -27,8 +61,12 @@
         supremoSocket.on('sumimetro', (data) => {
             let { username, value } = data;
             console.log(data);
-            let text = `${username} es: <br> ${value}% ${type}`;
+            let text = `${username}: ${value}%`;
+            let title = `${type.toUpperCase()} Supremo`;
             document.getElementById('supremo').innerHTML = text;
+            //document.getElementById('user').innerHTML = username;
+            //document.getElementById('percent').innerHTML = value;
+
         })
 
         supremoSocket.on('active', () => {
