--- a/src/routes/public/speach.html
+++ b/src/routes/public/speach.html
@@ -30,9 +30,9 @@
         speach.lang = 'es-US';
 
         channelSocket.on('speach', (data) => {
-            if (lastMsgID !== data.id) {
+            if (lastMsgID !== 'quack') {
                 let msg = data.message;
-                lastMsgID = data.id;
+                //lastMsgID = data.id;
                 speach.text = msg;
                 synth.speak(speach);
             }
