Updated MongoDB Schema
Also updated the speach command to have its own separte file and added config to each command (I'll take it out later because found better way of doing so)

--- a/src/routes/public/speach.html
+++ b/src/routes/public/speach.html
@@ -30,9 +30,9 @@
         speach.lang = 'es-US';
 
         channelSocket.on('speach', (data) => {
-            if (lastMsgID !== 'quack') {
+            if (lastMsgID !== data.id) {
                 let msg = data.message;
-                //lastMsgID = data.id;
+                lastMsgID = data.id;
                 speach.text = msg;
                 synth.speak(speach);
             }
