--- a/src/routes/public/triggerupload.html
+++ b/src/routes/public/triggerupload.html
@@ -33,6 +33,7 @@
                 .then(data => {
                     console.log(data);
                     alert(data.message);
+                    uploadForm.reset();
                 });
         });
 
