fixed upload error

--- a/src/routes/public/managetriggers.html
+++ b/src/routes/public/managetriggers.html
@@ -17,7 +17,7 @@
             <div class="menu">
                 <ul>
                     <li><a href="/dashboard">Dashboard</a></li>
-                    <li><a href="/trigger/manage/cdom201">Triggers</a></li>
+                    <li><a href="/trigger/manage/">Triggers</a></li>
                     <li><a href="/logout">Logout</a></li>
                 </ul>
             </div>
@@ -47,7 +47,8 @@
         </div>
         <div class="upload-content">
             <form id="fileUploadForm">
-                <input type="text" name="triggerName" id="triggerName" placeholder="File Name" class="triggerName" required>
+                <input type="text" name="triggerName" id="triggerName" placeholder="File Name" class="triggerName"
+                    required>
                 <div class="form-group">
                     <input type="file" name="trigger" id="file" class="file">
                     <p id="fileSize"></p>
