--- a/src/routes/public/managetriggers.html
+++ b/src/routes/public/managetriggers.html
@@ -17,7 +17,7 @@
             <div class="menu">
                 <ul>
                     <li><a href="/dashboard">Dashboard</a></li>
-                    <li><a href="/trigger/manage/">Triggers</a></li>
+                    <li><a href="" id="triggerRef">Triggers</a></li>
                     <li><a href="/logout">Logout</a></li>
                 </ul>
             </div>
