--- a/src/routes/public/dashboard.html
+++ b/src/routes/public/dashboard.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
         nav {
             display: flex;
             justify-content: space-between;
