--- a/src/routes/public/trigger.html
+++ b/src/routes/public/trigger.html
@@ -18,7 +18,7 @@
             transports: ['websocket']
         });
 
-        const triggerSocket = io(`/triggers/${channel}`, {
+        const triggerSocket = io(`/overlay/triggers/${channel}`, {
             forceNew: true,
             transports: ['websocket']
         });
