Socket Connection on client

--- a/src/routes/public/trigger.html
+++ b/src/routes/public/trigger.html
@@ -27,8 +27,8 @@
             console.log(data);
         });
 
-        socket.on('connect', () => {
-            console.log('Connected to server');
+        socket.on('prepareTriggers', () => {
+            console.log('Triggers ready');
         });
     </script>
 </body>
